--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Portfolio</title>
+        <link rel="stylesheet" href="style.css"> 
         <script src="script.js"></script>
     </head> 
     
@@ -11,8 +12,6 @@
         <div>
             <h1>Course Outlines</h1>
             <ul>
-                <!--Consists of 5 elements-->
-                <!--Nav elements can navigate anywhere-->
 				<a href="./courseOutlines/CO DBAS 1007 Data Fundamentals.pdf"><li>Data Fundamentals</li></a>
 				<a href="./courseOutlines/CO PROG 1700 Logic and Programming.pdf"><li>Logic and Programming (JAVA)</li></a>
 				<a href="./courseOutlines/CO- WEBD1000.pdf"><li>Web Development</li></a>
@@ -24,10 +23,29 @@
 				<a href="./courseOutlines/PROG 2007 - Course Outline.pdf"><li>Programming in C</li></a>
                 <a href="./courseOutlines/PROG 2700- Course Outline.pdf"><li>Clientside Programming</li></a>
                 <a href="./courseOutlines/SAAD 1001.pdf"><li>Systems Analysis and Design</li></a>
+                <a href="./courseOutlines/advancedTopicsInProgramming.pdf"><li>Advanced Topics in Programming</li></a>
+                <a href="./courseOutlines/cPlusPLus.docx"><li>Programming in C++</li></a>
+                <a href="./courseOutlines/mobileAppDev.docx"><li>Mobile Application Development - Android</li></a>
+                <a href="./courseOutlines/projectManagement.docx"><li>Project Management</li></a>
+                <a href="./courseOutlines/webApplicationDevelopment.pdf"><li>Web Application Programming</li></a>
+                <a href="./courseOutlines/professionalPracticeForIt.pdf"><li>Professional Practice for IT II</li></a>
 			</ul>
         </div>
         <div>
-            <h1>Goal Statement</h1>
+            <h1>Career Goals</h1>
+            <h2>Short Term</h2>
+            <ul>
+                <li>In the next year I'd like to have finished an internship</li>
+                <li>In the early days of my career I'd like to build a large scale project to use in my portfolio</li>
+                <li>Within a year of finishing school I'd like to have a solid position at a company doing programming</li>
+            </ul>
+            <h2>Long Term</h2>
+            <ul>
+                <li>I'd like to have a longstanding secure position at a company</li>
+                <li>I want to release my own passion project video game</li>
+                <li>I want to build a very impressive portfolio to show off my work</li>
+            </ul>
+ 
             <p>My goal as a student at NSCC is to be what I consider a full fledged programmer. I don't want to use this opportunity to just get my marks and be done, I want to fully understand programming concepts and genuinely put my heart and soul into learning about them as I consider this field to not just be a means of a job, I consider it my passion. </p>
         </div>
         <div>
@@ -42,14 +60,33 @@
                 <li>Proficient in Object Oriented Programming Concepts</li>
                 <li>Proficient in use of Linux and Windows Operating Systems</li>
                 <li>Proficient in Networking and Security Concepts</li>
+                <li>Proficient in C++</li>
+                <li>Proficient in Android Studio Development</li>
+                <li>Proficient with Springboot, Thymeleaf, and various Backend Databases</li>
+                <li>Familiar with Project Management concepts</li>
+                <li>Familiar with Kotlin</li>
+                <li>Familiar with LUA</li>
 			</ul>
+            <h1>Evidence of knowledge/Work Examples</h1>
+            <a href="https://github.com/BOOG77"><p>Here's a link to my Github where you can find the majority of my work to date</p></a>
         </div>
         <div>
             <h1>Check out my resume!</h1>
             <ul>
                 <a href="./Resume/Dawson-Brown-Resume-1.pdf"><li>Resume</li></a>
                 <a href="./Resume/Personal Profile.pdf"><li>Personal Profile/Cover Letter</li></a>
+                <a href="./Resume/lockheedMartinCoverLetter.pdf"><li>A Recent Cover Letter Targeted at applying for Lockheed Martin</li></a>
             </ul>
+            <h1>Reflection</h1>
+            <ul>
+                <p>
+                In my time at NSCC so far my familiarity with programming concepts has grown greatly. I can think back to the times where
+                I was so confused and didn't know what to do with many things I find simple now, I remember thinking to myself, "I understand programming logic but I just can't piece together how to build things with it".
+                Now I've built full sophisticated programs like college databases, library systems, full android video games, and so many more things that I couldn't possibly fit them all into one list nowadays.
+                If I could go back and tell myself anything it would be to trust the process, programming isn't a simple thing and requires understanding a huge amount of concepts.
+                </p>
+            </ul>
+            
             <h1>Transcript:</h1>
             <ul>
                 <a href="./courseOutlines/transcript.pdf"><li>Transcript</li></a>
