--- a/index.html
+++ b/index.html
@@ -168,7 +168,9 @@
                 </li>
             </ul>
         </div>
-
- 
     </body> 
+
+    <footer class="sticky-footer">
+        <p>Dawson Brown's Portfolio • Last Updated January 22nd, 2026</p>
+    </footer>
 </html> 
