--- a/index.html
+++ b/index.html
@@ -171,6 +171,6 @@
     </body> 
 
     <footer class="sticky-footer">
-        <p>Dawson Brown's Portfolio • Last Updated January 22nd, 2026</p>
+        <p>Dawson Brown's Portfolio • Last Updated January 22nd, 2026 • <strong>dawsonb14@hotmail.com</strong> for inquiries.</p>
     </footer>
 </html> 
